# MARL-MPC

./: 2024_10_9_15_13_54_backstepping_poses.txt  2024_10_9_15_14_29_backstepping_poses.txt  2024_10_9_15_20_6_backstepping_poses.txt  2024_9_29_18_54_53_backstepping_poses.txt  README.md  robot_state_list.txt
RL/: Actor-Critic算法.py  DDPG算法.py  DQN改进算法1.py  DQN改进算法2.py  DQN算法1.py  DQN算法2.py  Dyna-Q算法.py  PPO算法.py  TEST.py  TRPO算法.py  rl_utils.py  动态规划算法1.py  动态规划算法2.py  多臂老虎机.py  时序差分算法.py  策略梯度算法.py  马尔科夫决策过程.py
install/: local_setup.sh  setup.sh
log/: latest_build
rl_rvo_nav/: .gitignore  LICENSE  README.md  setup.py  setup.sh
rl_rvo_nav/gym_env/: dynamic_obs_test.yaml  gym_env_test.py  gym_test_world.yaml  readme.md  setup.py
rl_rvo_nav/gym_env/gym_env/: __init__.py
rl_rvo_nav/rl_rvo_nav/policy/: policy_rnn_ac.py
rl_rvo_nav/rl_rvo_nav/policy_test/: policy_test.py  policy_test_world.yaml  policy_test_world_lines.yaml  post_train.py
src/: result_plot.py
src/action_interfaces/: CMakeLists.txt
src/motor_interfaces/: CMakeLists.txt  package.xml
src/mpc_controller/: CMakeLists.txt
src/multi_mir_package/: package.xml  setup.cfg  setup.py
src/multi_mpc_controller/: CMakeLists.txt  package.xml
src/multi_mpc_controller/src/: control_node.cpp  mpc_controller.cpp  multi_control_node.cpp  record.cpp  uniform_bspline.cpp
src/multi_traj_publish/: CMakeLists.txt
src/my_mir_package/: package.xml  setup.py
src/my_package/: setup.py
src/post_train/: setup.cfg  setup.py
src/traj_interfaces/: CMakeLists.txt
src/traj_publish/: CMakeLists.txt  package.xml
(+210 files in other folders)
